crates/cribo/tests/snapshots/execution_results@xfail_builtin_types_circular.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
assertion_line: 563
input_file: crates/cribo/tests/fixtures/xfail_builtin_types_circular/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 280, in <module>",
}
