crates/cribo/tests/snapshots/execution_results@xfail_builtin_types_in_module_with_side_effects.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_builtin_types_in_module_with_side_effects/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "Loading compat module...",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 25, in <module>",
}
