crates/cribo/tests/snapshots/execution_results@xfail_circular_deps_with_stdlib_name_conflict.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_circular_deps_with_stdlib_name_conflict/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 377, in <module>",
}
