crates/cribo/tests/snapshots/execution_results@xfail_circular_import_function_reference.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
assertion_line: 563
input_file: crates/cribo/tests/fixtures/xfail_circular_import_function_reference/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 203, in <module>",
}
