crates/cribo/tests/snapshots/execution_results@xfail_forward_reference_attribute_access.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_forward_reference_attribute_access/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"<stdin>\", line 76, in <module>",
}
